<resources>
    <string name="app_name">DownFall</string>

    <string name="hide_all">Hide opponent holes and token (Hard)</string>
    <string name="show_on_connect">Show opponent tokens only when they fall (Medium)</string>
    <string name="show_all">Show opponent holes and tokens (Easy)</string>
    <string name="smart_ai_string">Smart Artificial Intelligence (Hard)</string>
    <string name="enable_sounds">Enable sounds</string>
    <string name="back_string">Back</string>

    <string name="settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="end_game">End Game</string>
    <string name="help">Help</string>
    <string name="turn_done">Turn Done</string>

    <string name="win">You win!</string>
    <string name="win_order">Bad Order - You win!</string>
    <string name="lose">You lose!</string>
    <string name="lose_order">Bad Order - You lose!</string>

    <string name="start_two_player_game_title">Start two player game?</string>
    <string name="end_two_player_game_title">End game?</string>
    <string name="start_new_game">Start new game?</string>
    <string name="exit_game">Exit game?</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_player_0">Play yellow-red</string>
    <string name="confirm_player_1">Play green-blue</string>
    <string name="cancel">Cancel</string>
    <string name="tutorial">Tutorial</string>
    <string name="exit_tutorial">Exit tutorial?</string>

    <string name="game_over">Game Over</string>

    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="none_paired">Not Paired</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select Device</string>
    <string name="none_found">None Found</string>

    <string name="bluetooth">Bluetooth</string>
    <string name="connect">Connect</string>
    <string name="discoverable">Discoverable</string>
    <string name="start_two_player_game">Start Game</string>
    <string name="bt_not_enabled_leaving">bt_not_enabled_leaving</string>
    <string name="not_connected">not_connected</string>
    <string name="two_player_game_ended">Game ended by other player</string>

    <string name="help_text_0">Down-Fall</string>

    <string name="help_text_1">This is a two players game\n
        (or one against artificial intelligence).\n\n
        Each player is owner 2 sets of tokens. \n\n The Yellow and Red sets:
    </string>

    <string name="help_text_2">
        \nOr the Green and Blue sets:
    </string>

    <string name="help_text_3">
        \n\n
        The mission is to fall down all your tokens from the input queues via the wheels down to
        the output queue before the opponent does this with his tokens. \n\n

        In each turn a player select one wheel and rotate it as much as they want in one direction.
        The triangles are holes that the tokens can fall to.
    </string>

    <string name="help_text_4">
        The white triangles are belong to one player and the transparent triangles are belong to the opponent. \n\n

        When a token in upper wheel (or input queue) is in direction to hole of the same player in a bottom wheel (or output
        queue), the token will fall to the hole. \n\n

        When player finishes rotating a wheel they press on the turn done button:
    </string>

    <string name="help_text_5">
        After that the turn is over and the opponent can rotate any wheel, with one exception: they
        cannot rotate the same wheel that was rotated just now.\n\n

        The tokens of each color must fall to output queue in order. That means: token 1 before token 2 and so on.
        If players tokens fall to output queue out of order, they immediately lose the game.\n\n
    </string>

</resources>
